Added cloud-dashboard project

--- a/myprojects/index.html
+++ b/myprojects/index.html
@@ -111,6 +111,16 @@
                 <a href="/view.html?post=eks-automation&type=projects" class="view-link">View Details_</a>
             </div>
 
+            <div class="project-card">
+                <div class="badge-container">
+                    <span class="badge" style="background: #2ecc71; color: #000;">Monitoring</span>
+                    <span class="badge" style="background: #bd93f9; color: #fff;">Grafana</span>
+                </div>
+                <h2>Cloud Dashboard</h2>
+                <p>A real-time monitoring solution for multi-cloud environments.</p>
+                <a href="/view.html?post=cloud-dashboard&type=projects" class="view-link">View Details_</a>
+            </div>
+
             </div>
     </div>
 
