--- a/resume_backup.html
+++ b/resume_backup.html
@@ -373,10 +373,10 @@ pre.terminal > code::after {
 		<div id="container">
 			<div id="top-nav">
 				<ul>
-					<li><a href="#home" class="active">home</a></li>
-					<li><a href="/myprojects">projects</a></li>
-					<li><a href="/resources">resources</a></li>
-					<li class="right"><a href="/cli.html">cli</a></li>
+					<li><a href="#about" class="active">about</a></li>
+					<li><a href="#projects">projects</a></li>
+					<li><a href="#legend">resources</a></li>
+					<li class="right"><a href="/">cli</a></li>
 				</ul>
 			</div>
 
@@ -392,13 +392,11 @@ pre.terminal > code::after {
 			</div>
 
 			<div class="terminal-links">
-				<a href="/project?id=terraform-30">Project</a>
+				<a href="https://mfa.sh/projects">Project</a>
 				<span class="terminal-links-sep">|</span>
-				<a href="/myblogs">Blog</a>
+				<a href="https://mfa.sh/myblogs">Blog</a>
 				<span class="terminal-links-sep">|</span>
-				<a href="/phasebook">Phasebook</a>
-				<span class="terminal-links-sep">|</span>
-				<a href="/challenge">Challenge</a>
+				<a href="https://mfa.sh/challenge">Challenge</a>
 				<span class="terminal-links-sep">|</span>
 				<a href="https://github.com/mohammadzfaisal/myterminalcv">Source</a>
 			</div>
@@ -534,4 +532,3 @@ main();
 		</script>
 	</body>
 </html>
-
