removed resume.html and cms config

--- a/cli.html
+++ b/cli.html
@@ -181,7 +181,7 @@ jQuery(document).ready(function($) {
             date: "2026",
             link: "https://github.com/mohammadzfaisal/cloud-dashboard",
             description: "Production K8s setup",
-            file: "content/projects/cloud-dashboard.txt",
+            file: "content/projects/cloud-dashboard.md",
             color: "cyan",
             slug: "k8s-cluster",
             content: "Full kubernetes cluster configuration with monitoring and auto-scaling."
@@ -194,7 +194,7 @@ jQuery(document).ready(function($) {
             title: "Getting Started with Terraform",
             date: "2024-12-01",
             slug: "terraform-intro",
-            file: "content/posts/terraform-guide.txt"
+            file: "content/posts/terraform-guide.md"
             // content: "A comprehensive guide to infrastructure as code using Terraform."
         }
     ];
