--- a/myblogs/terraform-30.html
+++ b/myblogs/terraform-30.html
@@ -176,7 +176,7 @@ a, a:visited {
 	<div id="container">
 		<div id="top-nav">
 			<ul>
-				<li><a href="/resume.html">home</a></li>
+				<li><a href="/">home</a></li>
 				<li><a href="/myprojects">projects</a></li>
 				<li><a href="/resources">resources</a></li>
 				<li class="right"><a href="/">cli</a></li>
