--- a/myprojects/index.html
+++ b/myprojects/index.html
@@ -210,7 +210,7 @@ table tbody .code {
 		<div id="container">
 			<div id="top-nav">
 				<ul>
-					<li><a href="/resume.html">home</a></li>
+					<li><a href="/">home</a></li>
 					<li><a href="/myprojects" class="active">projects</a></li>
 					<li><a href="/resources">resources</a></li>
 					<li class="right"><a href="/">cli</a></li>
