--- a/myblogs/index.html
+++ b/myblogs/index.html
@@ -165,7 +165,7 @@
     <div id="container">
         <div id="top-nav">
             <ul>
-                <li><a href="/resume.html">home</a></li>
+                <li><a href="/">home</a></li>
                 <li><a href="/myprojects">projects</a></li>
                 <li><a href="/resources">resources</a></li>
                 <li class="right"><a href="/">cli</a></li>
