--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ ul {
 
 .terraform-highlight {
 	color: var(--color2);
-	font-style: italic;
+	font-style: normal;
 }
 
 .hidden {
@@ -387,7 +387,7 @@ pre.terminal > code::after {
 					<br><br>
 					This is my learning log and project hub for cloud engineering. I work through AWS challenges, infrastructure design, automation, and Linux system internals — documenting what works, what breaks, and what I learn along the way.
 					<br><br>
-					<strong>** The <span class="terraform-highlight">Complete Terraform</span> is in progress! **</strong> It's available in the projects section at mfa.sh
+					<strong>** The <span class="terraform-highlight">Complete Terraform</span> is in progress! **</strong> It's available in the challenge section at mfa.sh
 				</p>
 			</div>
 
@@ -436,7 +436,7 @@ const COMMANDS = [
 '  <span class="terminal-highlight">Recently migrated 21+ VMs to k8s with zero downtime.</span>',
 			'',
 			'  <span style="color: var(--color3);">┌─ About ──────────────────────┐  ┌─ Links ──────────────────────┐</span>',
-			'  <span style="color: var(--color3);">│</span> <span style="color: var(--color5);">This is my personal terminal </span><span style="color: var(--color3);">│  │</span> <span class="terminal-link">Projects    mfa.sh/projects  </span><span style="color: var(--color3);">│</span>',
+			'  <span style="color: var(--color3);">│</span> <span style="color: var(--color5);">This is my personal terminal </span><span style="color: var(--color3);">│  │</span> <span class="terminal-link">Projects    mfa.sh/myprojects</span><span style="color: var(--color3);">│</span>',
 			'  <span style="color: var(--color3);">│</span> <span style="color: var(--color5);">style site where I document  </span><span style="color: var(--color3);">│  │</span> <span class="terminal-link">Challenge   mfa.sh/challenge </span><span style="color: var(--color3);">│</span>',
 			'  <span style="color: var(--color3);">│</span> <span style="color: var(--color5);">cloud engineering projects,  </span><span style="color: var(--color3);">│  │</span> <span class="terminal-link">Blog        mfa.sh/myblogs   </span><span style="color: var(--color3);">│</span>',
 			'  <span style="color: var(--color3);">│</span> <span style="color: var(--color5);">AWS challenges, and system   </span><span style="color: var(--color3);">│  │</span> <span class="terminal-link">GitHub      mohammadzfaisal  </span><span style="color: var(--color3);">│</span>',
